git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3466 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -55,6 +55,7 @@
       <plugins>
         <plugin>
           <artifactId>maven-antrun-plugin</artifactId>
+          <version>${antrun.version}</version>
           <configuration>
             <target>
               <property name="maven.plugin.classpath" refid="maven.plugin.classpath" />
