git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3467 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -95,6 +95,7 @@
     <profile>
       <id>ci</id>
       <properties>
+        <cmd>noop</cmd>
         <ant.target>${cmd}</ant.target>
         <jenkins.job.type>${job}</jenkins.job.type>
         <jenkins.project.name>${p}</jenkins.project.name>
