--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -95,7 +95,7 @@
     <profile>
       <id>ci</id>
       <properties>
-        <cmd>showcli</cmd>
+        <cmd>help</cmd>
         <ant.target>${cmd}</ant.target>
         <jenkins.job.type>${job}</jenkins.job.type>
         <jenkins.project.name>${p}</jenkins.project.name>
