git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3473 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
@@ -1,6 +1,6 @@
 ant.java.fork=true
 ant.java.failonerror=true
-jenkins.server=http://ec2-107-20-11-86.compute-1.amazonaws.com:8081/
+jenkins.server=http://ec2-107-20-11-86.compute-1.amazonaws.com:8081
 jenkins.cli.classname=hudson.cli.CLI
 jenkins.cli.wait=-s
 jenkins.cli.changes=-c
