git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3475 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -118,7 +118,7 @@
                   <goal>create-timestamp</goal>
                 </goals>
                 <configuration>
-                  <timestampFormat>yyyy-MM-dd HH:mm z</timestampFormat>
+                  <timestampFormat>yyyy-MM-dd HH:mm:ss.S z</timestampFormat>
                   <timestampPropertyName>jenkins.build.timestamp</timestampPropertyName>
                 </configuration>
               </execution>
@@ -135,7 +135,7 @@
       <properties>
         <ant.target>cli</ant.target>
         <cmd>help</cmd>
-        <jenkins.cmd>${cmd}</jenkins.cmd>
+        <jenkins.cli.cmd>${cmd}</jenkins.cli.cmd>
       </properties>
       <build>
         <filters>
