git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3476 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
@@ -21,7 +21,7 @@
   <target name="noop" />
 
   <target name="cli">
-    <echo>${jenkins.server} - ${jenkins.cmd}</echo>
+    <echo>${jenkins.server} - ${jenkins.cli.cmd}</echo>
     <java classname="${jenkins.cli.classname}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}" failonerror="${ant.java.failonerror}">
       <arg value="-s" />
       <arg value="${jenkins.server}" />
