--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
@@ -1,10 +1,13 @@
 ant.java.fork=true
 ant.java.failonerror=true
+ant.input=${jenkins.job.input.file}
+ant.output=${jenkins.job.output.file}
 jenkins.server=http://ec2-107-20-11-86.compute-1.amazonaws.com:8081
 jenkins.cli.classname=hudson.cli.CLI
 jenkins.cli.wait=-s
 jenkins.cli.changes=-c
 jenkins.job.name=${jenkins.project.artifactId}-${jenkins.project.majorVersion}-${jenkins.job.type}
-jenkins.job.file=target/classes/org/kuali/cm/jenkins/jobs/template-${jenkins.template.type}-${jenkins.project.scm.type}.xml
+jenkins.job.input.file=target/classes/org/kuali/cm/jenkins/jobs/template-${jenkins.template.type}-${jenkins.project.scm.type}.xml
+jenkins.job.output.file=target/${jenkins.job.name}-config.xml
 jenkins.project.scm.type=svn
 jenkins.git.branch=master
