git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3478 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
@@ -51,40 +51,27 @@
   </target>
 
   <target name="get">
-    <java classname="${jenkins.cli.classname}" output="target/${jenkins.job.name}-config.xml" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}"
-      failonerror="${ant.java.failonerror}">
-      <arg value="-s" />
-      <arg value="${jenkins.server}" />
-      <arg value="get-job" />
-      <arg value="${jenkins.job.name}" />
-    </java>
+    <antcall target="job">
+      <param name="jenkins.cli.cmd" value="get-job" />
+    </antcall>
   </target>
 
   <target name="create">
-    <java classname="${jenkins.cli.classname}" input="${jenkins.job.file}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}" failonerror="${ant.java.failonerror}">
-      <arg value="-s" />
-      <arg value="${jenkins.server}" />
-      <arg value="create-job" />
-      <arg value="${jenkins.job.name}" />
-    </java>
+    <antcall target="job">
+      <param name="jenkins.cli.cmd" value="create-job" />
+    </antcall>
   </target>
 
   <target name="update">
-    <java classname="${jenkins.cli.classname}" input="${jenkins.job.file}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}" failonerror="${ant.java.failonerror}">
-      <arg value="-s" />
-      <arg value="${jenkins.server}" />
-      <arg value="update-job" />
-      <arg value="${jenkins.job.name}" />
-    </java>
+    <antcall target="job">
+      <param name="jenkins.cli.cmd" value="update-job" />
+    </antcall>
   </target>
 
   <target name="delete">
-    <java classname="${jenkins.cli.classname}" input="${jenkins.job.file}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}" failonerror="${ant.java.failonerror}">
-      <arg value="-s" />
-      <arg value="${jenkins.server}" />
-      <arg value="delete-job" />
-      <arg value="${jenkins.job.name}" />
-    </java>
+    <antcall target="job">
+      <param name="jenkins.cli.cmd" value="delete-job" />
+    </antcall>
   </target>
 
 </project>
