--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
@@ -30,6 +30,7 @@
   </target>
 
   <target name="build">
+    <echo>${jenkins.server} - build - ${jenkins.job.name}</echo>
     <java classname="${jenkins.cli.classname}" input="${ant.input}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}" failonerror="${ant.java.failonerror}">
       <arg value="-s" />
       <arg value="${jenkins.server}" />
@@ -40,26 +41,34 @@
     </java>
   </target>
 
+  <target name="get">
+    <echo>${jenkins.server} - get-job - ${jenkins.job.name} &gt; ${ant.output}</echo>
+    <java classname="${jenkins.cli.classname}" output="${ant.output}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}" failonerror="${ant.java.failonerror}">
+      <arg value="-s" />
+      <arg value="${jenkins.server}" />
+      <arg value="get-job" />
+      <arg value="${jenkins.job.name}" />
+    </java>
+  </target>
+
+  <target name="create">
+    <echo>${jenkins.server} - create-job - ${jenkins.job.name} &lt; ${ant.input}</echo>
+    <java classname="${jenkins.cli.classname}" input="${ant.input}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}" failonerror="${ant.java.failonerror}">
+      <arg value="-s" />
+      <arg value="${jenkins.server}" />
+      <arg value="create-job" />
+      <arg value="${jenkins.job.name}" />
+    </java>
+  </target>
+
   <target name="job">
-    <java classname="${jenkins.cli.classname}" input="${ant.input}" output="${ant.output}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}"
-      failonerror="${ant.java.failonerror}">
+    <echo>${jenkins.server} - ${jenkins.cli.cmd} - ${jenkins.job.name}</echo>
+    <java classname="${jenkins.cli.classname}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}" failonerror="${ant.java.failonerror}">
       <arg value="-s" />
       <arg value="${jenkins.server}" />
       <arg value="${jenkins.cli.cmd}" />
       <arg value="${jenkins.job.name}" />
     </java>
-  </target>
-
-  <target name="get">
-    <antcall target="job">
-      <param name="jenkins.cli.cmd" value="get-job" />
-    </antcall>
-  </target>
-
-  <target name="create">
-    <antcall target="job">
-      <param name="jenkins.cli.cmd" value="create-job" />
-    </antcall>
   </target>
 
   <target name="update">
