git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3482 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
@@ -64,13 +64,13 @@
   </target>
 
   <target name="create">
-    <antcall target="input-cli-cmd">
+    <antcall target="inputcmd">
       <param name="jenkins.cli.cmd" value="create-job" />
     </antcall>
   </target>
 
   <target name="update">
-    <antcall target="input-cli-cmd">
+    <antcall target="inputcmd">
       <param name="jenkins.cli.cmd" value="update-job" />
     </antcall>
   </target>
