git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3488 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
@@ -30,11 +30,12 @@
   </target>
 
   <target name="build">
-    <echo>${jenkins.server} - build - ${jenkins.job.name}</echo>
+    <param name="jenkins.cli.cmd" value="build" />
+    <echo>${jenkins.server} - ${jenkins.cli.cmd} - ${jenkins.job.name}</echo>
     <java classname="${jenkins.cli.classname}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}" failonerror="${ant.java.failonerror}">
       <arg value="-s" />
       <arg value="${jenkins.server}" />
-      <arg value="build" />
+      <arg value="${jenkins.cli.cmd}" />
       <arg value="${jenkins.job.name}" />
       <!--
         This causes Jenkins to skip the build if nothing has changed.
