git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3489 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
@@ -50,22 +50,24 @@
   </target>
 
   <target name="get">
-    <echo>${jenkins.server} - get-job - ${jenkins.job.name}</echo>
+    <param name="jenkins.cli.cmd" value="get-job" />
+    <echo>${jenkins.server} - ${jenkins.cli.cmd} - ${jenkins.job.name}</echo>
     <echo>file - ${ant.output}</echo>
     <java classname="${jenkins.cli.classname}" output="${ant.output}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}" failonerror="${ant.java.failonerror}">
       <arg value="-s" />
       <arg value="${jenkins.server}" />
-      <arg value="get-job" />
+      <arg value="${jenkins.cli.cmd}" />
       <arg value="${jenkins.job.name}" />
     </java>
   </target>
 
   <target name="delete">
-    <echo>${jenkins.server} - delete-job - ${jenkins.job.name}</echo>
+    <param name="jenkins.cli.cmd" value="delete-job" />
+    <echo>${jenkins.server} - ${jenkins.cli.cmd} - ${jenkins.job.name}</echo>
     <java classname="${jenkins.cli.classname}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}" failonerror="${ant.java.failonerror}">
       <arg value="-s" />
       <arg value="${jenkins.server}" />
-      <arg value="delete-job" />
+      <arg value="${jenkins.cli.cmd}" />
       <arg value="${jenkins.job.name}" />
     </java>
   </target>
