git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3491 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
@@ -50,6 +50,7 @@
   </target>
 
   <target name="get">
+    <property name="jenkins.cli.cmd" value="get-job" />
     <echo>${jenkins.server} - ${jenkins.cli.cmd} - ${jenkins.job.name}</echo>
     <echo>file - ${ant.output}</echo>
     <java classname="${jenkins.cli.classname}" output="${ant.output}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}" failonerror="${ant.java.failonerror}">
@@ -61,7 +62,7 @@
   </target>
 
   <target name="delete">
-    <param name="jenkins.cli.cmd" value="delete-job" />
+    <property name="jenkins.cli.cmd" value="delete-job" />
     <echo>${jenkins.server} - ${jenkins.cli.cmd} - ${jenkins.job.name}</echo>
     <java classname="${jenkins.cli.classname}" classpath="${maven.plugin.classpath}" fork="${ant.java.fork}" failonerror="${ant.java.failonerror}">
       <arg value="-s" />
