git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3493 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
@@ -39,7 +39,7 @@
       <arg value="${jenkins.job.name}" />
       <!--
         This causes Jenkins to skip the build if nothing has changed.
-        Commented out because it wasn't working property in 1.440.
+        Commented out because it wasn't working properly in 1.440.
         Also, if someone has gone to the trouble of invoking the Jenkins
         CLI to fire a build they are most likely going to expect that
         it will kick off a build, even if nothing has changed.
