--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
@@ -42,7 +42,7 @@
         Commented out because it wasn't working properly in 1.440.
         Also, if someone has gone to the trouble of invoking the Jenkins
         CLI to fire a build they are most likely going to expect that
-        it will kick off a build, even if nothing has changed.
+        it will kick off a build regardless of things having changed or not.
         <arg value="${jenkins.cli.changes}" />
       -->
       <arg value="${jenkins.cli.wait}" />
