git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3497 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -109,8 +109,7 @@
         <filters>
           <filter>src/main/resources/org/kuali/cm/jenkins/kuali.properties</filter>
           <filter>src/main/resources/org/kuali/cm/jenkins/jenkins.properties</filter>
-          <filter>src/main/resources/org/kuali/cm/jenkins/jobs/${jenkins.job.type}.properties</filter>
-          <filter>src/main/resources/org/kuali/cm/jenkins/jobs/publish-properties.xml</filter>
+          <filter>src/main/resources/org/kuali/cm/jenkins/jobs/${jenkins.job.type}-properties.xml</filter>
           <filter>src/main/resources/org/kuali/cm/jenkins/projects/${jenkins.project.name}.properties</filter>
         </filters>
         <plugins>
