git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3509 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -113,10 +113,12 @@
                   <goal>read-project-properties</goal>
                 </goals>
                 <configuration>
+                  <quiet>true</quiet>
                   <files>
                     <file>src/main/resources/org/kuali/cm/jenkins/kuali.properties</file>
                     <file>src/main/resources/org/kuali/cm/jenkins/jenkins.properties</file>
                     <file>src/main/resources/org/kuali/cm/jenkins/jobs/${jenkins.job.type}-properties.xml</file>
+                    <file>src/main/resources/org/kuali/cm/jenkins/jobs/${jenkins.job.type}.properties</file>
                     <file>src/main/resources/org/kuali/cm/jenkins/projects/${jenkins.project.name}.properties</file>
                   </files>
                 </configuration>
