--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -102,9 +102,9 @@
       <build>
         <plugins>
           <plugin>
-            <groupId>org.codehaus.mojo</groupId>
+            <groupId>org.kuali.maven.plugins</groupId>
             <artifactId>properties-maven-plugin</artifactId>
-            <version>1.0-alpha-2</version>
+            <version>1.0.3</version>
             <executions>
               <execution>
                 <id>get-properties</id>
