git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3529 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -134,7 +134,7 @@
                   <goal>create-timestamp</goal>
                 </goals>
                 <configuration>
-                  <timestampFormat>yyyy-MM-dd HH:mm:ss.S z</timestampFormat>
+                  <timestampFormat>yyyy-MM-dd HH:mm:ss z</timestampFormat>
                   <timestampPropertyName>jenkins.build.timestamp</timestampPropertyName>
                 </configuration>
               </execution>
