git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3530 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -88,7 +88,7 @@
       <name>Jeff Caddel</name>
       <organization>rSmart</organization>
       <timezone>-7</timezone>
-      <email>jcaddel-(at)-kuali.org</email>
+      <email>jcaddel@kuali.org</email>
     </developer>
   </developers>
   <profiles>
