--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -117,6 +117,7 @@
                     <file>src/main/resources/org/kuali/cm/jenkins/kuali.properties</file>
                     <file>src/main/resources/org/kuali/cm/jenkins/jenkins.properties</file>
                     <file>src/main/resources/org/kuali/cm/jenkins/jobs/common-properties.xml</file>
+                    <file>src/main/resources/org/kuali/cm/jenkins/jobs/${jenkins.template.type}-properties.xml</file>
                     <file>src/main/resources/org/kuali/cm/jenkins/jobs/${jenkins.job.type}-properties.xml</file>
                     <file>src/main/resources/org/kuali/cm/jenkins/projects/${jenkins.project.name}.properties</file>
                   </files>
