--- a/extractor-maven-plugin/pom.xml
+++ b/extractor-maven-plugin/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>extractor-maven-plugin</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>Extractor Maven Plugin</name>
   <description>
@@ -20,9 +20,9 @@
     <kuali.slf4j.version>1.6.4</kuali.slf4j.version>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/extractor-maven-plugin-1.0.0</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/extractor-maven-plugin-1.0.0</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/tags/extractor-maven-plugin-1.0.0</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/extractor-maven-plugin</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/extractor-maven-plugin</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/extractor-maven-plugin</url>
   </scm>
   <developers>
     <developer>
