--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -79,6 +79,16 @@
             </dependency>
           </dependencies>
         </plugin>
+        <plugin>
+          <groupId>org.kuali.maven.plugins</groupId>
+          <artifactId>extractor-maven-plugin</artifactId>
+          <version>1.0.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.kuali.maven.plugins</groupId>
+          <artifactId>properties-maven-plugin</artifactId>
+          <version>1.0.3</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
@@ -103,8 +113,20 @@
         <plugins>
           <plugin>
             <groupId>org.kuali.maven.plugins</groupId>
+            <artifactId>extractor-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>extract</id>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>extract</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.kuali.maven.plugins</groupId>
             <artifactId>properties-maven-plugin</artifactId>
-            <version>1.0.3</version>
             <executions>
               <execution>
                 <id>get-properties-1</id>
