git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3567 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
@@ -6,7 +6,7 @@ jenkins.server=http://ec2-107-20-11-86.compute-1.amazonaws.com:8081
 jenkins.cli.classname=hudson.cli.CLI
 # Wait for the job to finish before continuing
 jenkins.cli.wait=-s
-# Don't build unless things have changed
+# Don't build unless there are changes
 jenkins.cli.changes=-c
 jenkins.job.name=${jenkins.project.artifactId}-${jenkins.project.majorVersion}-${jenkins.job.type}
 jenkins.job.input.file=target/classes/org/kuali/cm/jenkins/jobs/template-${jenkins.template.type}-${jenkins.project.scm.type}.xml
