git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3577 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -140,8 +140,8 @@
                   <files>
                     <file>src/main/resources/org/kuali/cm/jenkins/kuali.properties</file>
                     <file>src/main/resources/org/kuali/cm/jenkins/jenkins.properties</file>
-                    <file>src/main/resources/org/kuali/cm/jenkins/jobs/templates/properties.xml</file>
-                    <file>src/main/resources/org/kuali/cm/jenkins/jobs/templates/${jenkins.project.scmType}-properties.xml</file>
+                    <file>src/main/resources/org/kuali/cm/jenkins/jobs/properties/common.xml</file>
+                    <file>src/main/resources/org/kuali/cm/jenkins/jobs/properties/${jenkins.project.scmType}.xml</file>
                     <file>src/main/resources/org/kuali/cm/jenkins/jobs/${jenkins.job.type}-properties.xml</file>
                     <file>src/main/resources/org/kuali/cm/jenkins/projects/${jenkins.project.name}.properties</file>
                   </files>
