git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3593 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
@@ -11,5 +11,4 @@ jenkins.cli.changes=-c
 jenkins.job.name=${jenkins.project.artifactId}-${jenkins.project.majorVersion}-${jenkins.job.type}
 jenkins.job.input.file=target/classes/org/kuali/cm/jenkins/jobs/template-${jenkins.template.type}-${jenkins.project.scm.type}.xml
 jenkins.job.output.file=target/${jenkins.job.name}-config.xml
-jenkins.project.scm.type=svn
-jenkins.jobs.git.branches.default=master
+jenkins.job.git.branches.default=master
