--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -142,7 +142,7 @@
                     <file>src/main/resources/org/kuali/cm/jenkins/jenkins.properties</file>
                     <file>src/main/resources/org/kuali/cm/jenkins/jobs/properties/common.xml</file>
                     <file>src/main/resources/org/kuali/cm/jenkins/jobs/properties/${jenkins.project.scmType}.xml</file>
-                    <file>src/main/resources/org/kuali/cm/jenkins/jobs/${jenkins.job.type}-properties.xml</file>
+                    <file>src/main/resources/org/kuali/cm/jenkins/jobs/types/${jenkins.job.type}.xml</file>
                     <file>src/main/resources/org/kuali/cm/jenkins/projects/${jenkins.project.name}.properties</file>
                   </files>
                 </configuration>
