git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3596 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
@@ -9,6 +9,6 @@ jenkins.cli.wait=-s
 # Don't build unless there are changes
 jenkins.cli.changes=-c
 jenkins.job.name=${jenkins.project.artifactId}-${jenkins.project.majorVersion}-${jenkins.job.type}
-jenkins.job.input.file=target/classes/org/kuali/cm/jenkins/jobs/template-${jenkins.template.type}-${jenkins.project.scm.type}.xml
+jenkins.job.input.file=target/classes/org/kuali/cm/jenkins/jobs/template.xml
 jenkins.job.output.file=target/${jenkins.job.name}-config.xml
 jenkins.job.git.branches.default=master
