--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/maven-kuali-common.properties
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/maven-kuali-common.properties
@@ -2,3 +2,5 @@ jenkins.project.scm.url=${svn.foundation.repo}/trunk/maven-kuali-common
 jenkins.project.groupId=org.kuali.maven.common
 jenkins.project.artifactId=maven-kuali-common
 jenkins.project.majorVersion=1.1
+jenkins.project.scmType=svn
+
