git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3659 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -190,5 +190,20 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>projects</id>
+      <properties>
+        <ant.file>target/classes/org/kuali/cm/jenkins/projects/build.xml</ant.file>
+        <cmd>help</cmd>
+        <ant.target>${target}</ant.target>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 </project>
