git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3660 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -196,6 +196,7 @@
         <ant.file>target/classes/org/kuali/cm/jenkins/projects/build.xml</ant.file>
         <cmd>help</cmd>
         <ant.target>${target}</ant.target>
+        <ant.phase>initialize</ant.phase>
       </properties>
       <build>
         <plugins>
